--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,5 @@
 /* this is global css */
 body {
-    background-color: pink;
     padding: 0px;
     margin: 0px;
 }
@@ -19,6 +18,13 @@ h3 {
     margin: 0px;
 }
 
+h4 {
+    margin: 0px;
+    color: #000000;
+    font-family: sans-serif;
+    font-size: 16px;
+}
+
 p {
     margin: 0px;
     color: #000000;
@@ -27,8 +33,10 @@ p {
 }
 
 .main-container {
-    background-color: #faf9f6;
+    background-color: red;
     position: relative;
+    width: 60%;
+    margin: auto;
 }
 
 .d-flex {
@@ -37,6 +45,10 @@ p {
 
 .g-5 {
     gap: 5px;
+}
+
+.g-10 {
+    gap: 10px;
 }
 
 .align-center {
@@ -54,4 +66,41 @@ p {
 button,
 .cursor-pointer {
     cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: #000000;
+    font-family: sans-serif;
+}
+
+.content-container {
+    background-color: green;
+    padding: 10px 0px;
+}
+
+.button {
+    background-color: #000000;
+    border: none;
+    color: #ffffff;
+    padding: 10px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.white-button {
+    background-color: #ffffff;
+    border: 1px solid #000000;
+    color: #000000;
+}
+
+.button-width {
+    width: 100px;
+
+}
+
+@media only screen and (max-width:480px) {
+    .main-container {
+        width: 100%;
+    }
 }
