--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,6 +1,35 @@
 .navbar {
+    justify-content: space-between;
+    padding: 20px 0px;
+    position: sticky;
+    top: 0;
     background-color: #ffffff;
-    padding: 10px 10px;
-    box-shadow: 0px 1px 10px 1px #c5c5c5;
-    display: flex;
+
+}
+
+.link-div {
+    gap: 10px;
+}
+
+.link-div a {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.cart-icon-div {
+    position: relative;
+}
+
+.red-circle {
+    background-color: #FF0000;
+    border-radius: 50%;
+    position: absolute;
+    padding: 2px 6px;
+    right: 0;
+
+}
+
+.red-circle p {
+    color: #ffffff;
+    font-weight: bold;
 }
