--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -4,7 +4,7 @@
     position: fixed;
     height: 100vh;
     overflow-y: auto;
-    width: 400px;
+    width: 350px;
     background-color: #ffffff;
 }
 
@@ -23,4 +23,18 @@
     justify-content: flex-end;
     padding: 10px 15px;
 
+}
+
+.cart-row {
+    padding: 10px 20px;
+}
+
+.empty-cart-message-div {
+    padding: 25px;
+}
+
+@media only screen and (max-width:480px) {
+    .shopping-cart-container {
+        width: 100%;
+    }
 }
