--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,7 @@ body {
 }
 
 h2 {
-    color: blueviolet;
+    color: #000000;
     margin: 0px;
     font-family: sans-serif;
     font-size: 24px;
@@ -33,10 +33,10 @@ p {
 }
 
 .main-container {
-    background-color: red;
     position: relative;
     width: 60%;
     margin: auto;
+    padding-bottom: 40px;
 }
 
 .d-flex {
@@ -75,7 +75,6 @@ a {
 }
 
 .content-container {
-    background-color: green;
     padding: 10px 0px;
 }
 
@@ -84,8 +83,9 @@ a {
     border: none;
     color: #ffffff;
     padding: 10px;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
+    text-transform: uppercase;
 }
 
 .white-button {
@@ -94,9 +94,49 @@ a {
     color: #000000;
 }
 
+.red-button {
+    background-color: #fa2a55;
+    border: none;
+}
+
 .button-width {
     width: 100px;
 
+}
+
+.button:hover {
+    filter: brightness(95%);
+}
+
+.font-10 {
+    font-size: 10px;
+}
+
+.grid-container {
+    padding: 20px 0px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    border: 1px solid #c0c0c0;
+    border-radius: 5px;
+    height: 220px;
+    width: 180px;
+
+}
+
+.card:hover {
+    border: 2px solid #000000;
+}
+
+.image-div {
+    height: 160px;
+    padding: 2px;
+}
+
+.image-info-div {
+    padding: 5px;
 }
 
 @media only screen and (max-width:480px) {
