--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -4,9 +4,15 @@
     position: fixed;
     height: 100vh;
     overflow-y: auto;
-    width: 350px;
     background-color: #ffffff;
     z-index: 2;
+    width: 0px;
+    transition: 0.2s width ease;
+
+}
+
+.expanded {
+    width: 350px;
 }
 
 .cart-header {
