--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -7,7 +7,7 @@
     background-color: #ffffff;
     z-index: 2;
     width: 0px;
-    transition: 0.2s width ease;
+    transition: 0.3s width ease;
 
 }
 
@@ -24,6 +24,16 @@
 .cart-content {
     height: calc(100vh - 58px);
     overflow-y: auto;
+}
+
+.cart-content::-webkit-scrollbar {
+    width: 5px;
+
+}
+
+.cart-content::-webkit-scrollbar-thumb {
+    background-color: #808080;
+    border-radius: 10px;
 }
 
 .total-price-div {
