--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -13,6 +13,7 @@
 
 .expanded {
     width: 350px;
+    box-shadow: 1px 0px 300px 35px;
 }
 
 .cart-header {
@@ -50,8 +51,9 @@
     padding: 25px;
 }
 
-@media only screen and (max-width:480px) {
-    .shopping-cart-container {
+@media only screen and (max-width:720px) {
+    .expanded {
         width: 100%;
+        height: 100%;
     }
 }
