--- a/src/styles/StoreItem.css
+++ b/src/styles/StoreItem.css
@@ -16,7 +16,6 @@
 
 
 .product-column {
-    background-color: blue;
     width: 50%;
     aspect-ratio: 1/0.5;
 
@@ -68,5 +67,26 @@
     .product-row {
         flex-direction: column;
         align-items: center;
+    }
+
+    .product-column {
+        aspect-ratio: 1/1;
+    }
+
+    .product-heading-div {
+        height: 60px;
+    }
+
+    .product-heading-div .back-button-div {
+        top: 0;
+    }
+
+    .product-heading-div h3 {
+        position: absolute;
+        bottom: 0;
+    }
+
+    .desription-div {
+        width: 90%;
     }
 }
